--- a/style.css
+++ b/style.css
@@ -315,8 +315,14 @@ body::before {
         font-size: 28px;
     }
     
+    .final-subtitle {
+        font-size: 14px;
+        margin-bottom: 20px;
+    }
+    
     .final-gift-image {
-        max-width: 80%;
+        width: 90vw;
+        height: 60vh;
     }
 }
 
@@ -376,7 +382,7 @@ body::before {
     font-size: 20px;
     color: #ffb3c1;
     text-shadow: 2px 2px 0 rgba(0,0,0,0.3);
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 }
 
 .final-image-container {
